[package]
name = "polako"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Define the Bevy tree with `eml!`, style it using a very-css-like `ess` syntax and relate data data with `bind!` and `connect!`"
readme = "README.md"
homepage = "https://github.com/jkb0o/polako"
repository = "https://github.com/jkb0o/polako"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
