[package]
name = "polako"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Define the Bevy tree with `eml!`, style it using a very-css-like `ess` syntax and relate data data with `bind!` and `connect!`"
readme = "README.md"
homepage = "https://github.com/jkb0o/polako"
repository = "https://github.com/jkb0o/polako"

[workspace]
members = [
    "crates/polako_constructivism",
    "crates/polako_core",
    "crates/polako_eml",
    "crates/polako_flow",
    "crates/polako_input",
    "crates/polako_macro",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
polako_constructivism = { path = "crates/polako_constructivism" }
polako_eml = { path = "crates/polako_eml" }
polako_flow = { path = "crates/polako_flow" }
polako_macro = { path = "crates/polako_macro" }
polako_input = { path = "crates/polako_input" }

