[package]
name = "constructivism_macro"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full"]}
toml = "0.7.6"
constructivist = { path = "../constructivist" }
