[package]
name = "polako_eml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
polako_constructivism = { path = "../polako_constructivism"}
polako_macro = { path = "../polako_macro" }
