[package]
name = "polako_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
constructivist = { path = "../../../constructivist/crates/constructivist" }
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.31"
toml = "0.7.8"
