[package]
name = "polako_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# for local development:
constructivist = {  path = "../../../constructivist/crates/constructivist" }
# constructivist = {  git = "https://github.com/polako-rs/constructivism"}
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.31"
toml = "0.7.8"
